[package]
name = "goboscript"
version = "3.1.0"
edition = "2021"

[dependencies]
annotate-snippets = "0.11.4"
anyhow = "1.0.91"
arcstr = "1.2.0"
base64 = "0.22.1"
clap = { version = "4.5.20", features = ["derive"] }
clap_complete_command = "0.6.1"
clap_derive = "4.5.18"
colored = "2.1.0"
csscolorparser = "0.7.0"
directories = "6.0.0"
fxhash = "0.2.1"
glob = "0.3.1"
lalrpop-util = "0.22.0"
log = "0.4.22"
logos = "0.14.2"
md-5 = "0.10.6"
pretty_env_logger = "0.5.0"
semver = "1.0.25"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
toml = "0.8.19"
walkdir = "2.5.0"
zip = { version = "2.2.0", features = ["deflate"] }

[build-dependencies]
lalrpop = "0.22.0"
