[package]
name = "goboscript"
version = "3.3.0"
edition = "2021"
description = "goboscript is the Scratch compiler."
license = "MIT"
authors = ["Priyanshu Dangare <aspizu@protonmail.com>"]
homepage = "https://aspizu.github.io/goboscript"
categories = ["compilers"]

[dependencies]
annotate-snippets = "0.11.4"
anyhow = "1.0.91"
arcstr = { version = "1.2.0", features = ["serde"] }
base64 = "0.22.1"
chrono = "0.4"
clap = { version = "4.5.20", features = ["derive"] }
clap_complete_command = "0.6.1"
clap_derive = "4.5.18"
colored = "3.0.0"
csscolorparser = "0.7.0"
directories = "6.0.0"
fast-float2 = "0.2.3"
fxhash = "0.2.1"
glob = "0.3.1"
reqwest = { version = "0.12", features = ["blocking", "json"] }
lalrpop-util = "0.22.0"
log = "0.4.22"
logos = "0.15"
md-5 = "0.10.6"
pretty_env_logger = "0.5.0"
semver = "1.0.25"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
suggestions = "0.1.1"
toml = "0.8.19"
walkdir = "2.5.0"
zip = { version = "3.0.0", default-features = false, features = ["deflate"] }
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1.7"
serde-wasm-bindgen = "0.6.5"
js-sys = "0.3.77"
tsify = { version = "0.5.5", default-features = false, features = ["js"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
inquire = "0.7.5"
rand = "0.9.1"

[build-dependencies]
lalrpop = "0.22.0"

[lib]
name = "libgoboscript"
crate-type = ["cdylib", "rlib"]

# <https://github.com/rustwasm/wasm-pack/issues/1441>
[package.metadata.wasm-pack.profile.release]
wasm-opt = ["--enable-bulk-memory", "--enable-nontrapping-float-to-int"]

[profile.release]
debug = false
strip = true
lto = true
codegen-units = 1
panic = "abort"
