[project]
name = "goboscript"
version = "0.1.0"
description = "The goboscript compiler."
license = { file = "LICENSE" }
authors = [{ name = "aspizu", email = "aspizu@protonmail.com" }]
dependencies = ["lark"]

[tool.setuptools]
py-modules = []

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pyright]
typeCheckingMode = "strict"
# If a library doesn't provide type-stubs, this disables type-checking.
reportUnknownVariableType = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportMissingModuleSource = false
# Some libraries just don't provide type-stubs.
reportMissingTypeStubs = false
reportWildcardImportFromLibrary = false
enableTypeIgnoreComments = false
# A "type: ignore" comment should not be used, instead use a "pyright: ignore[rule1, ...]" comment
# to ignore specific rules.
reportUnnecessaryTypeIgnoreComment = true
strictParameterNoneValue = true
# "x: int | None = None" should not be "x: int = None"
 
[tool.ruff]
line-length = 88
select = ["ALL"]
ignore = [
  "D",
  "ANN",
  "COM",
  "A003",
  "TD001",
  "TD002",
  "S108",
  "I001",
  "F403",
  "A002",
  "SLF001",
  "T201",
  "F841",
  "E402",
  "PLR0913",
  "S603",
  "S607",
  "S101",
  "A001",
  "EM101",
  "TRY003",
  "EM102",
  "E721",
  "FBT003",
  "S324",
  "TID252",
  'E501',
  'ISC001',
  'Q000',
  'Q001',
  'Q002',
  'Q003',
  'W191',    # ruff format
  "INP001",
]

[tool.isort]
skip_gitignore = true
line_length = 128
length_sort = true
# string annotations allow using things not defined yet.
add_imports = ["from __future__ import annotations"]
#force_single_line = true
atomic = true
# makes import statements tight.
lines_between_sections = 0
