[project]
name = "goboscript-docs"
version = "1.0.0"
dependencies = [
    "mkdocs==1.6.1",
    "mkdocs-git-authors-plugin>=0.10.0",
    "mkdocs-git-committers-plugin-2>=2.5.0",
    "mkdocs-git-revision-date-localized-plugin>=1.5.1",
    "mkdocs-material[imaging]>=9.7.4",
]
requires-python = ">=3.10"
